 added: replace ##took## in template by time taken (use Time::Hires)
	percentages for target and domain
2002-11-19 v0.11_6 Tels (not released)
 fixed: some "unitialized warnings"
        writing out skipped items and compressed size to fix these on read
        (items_skipped vs. skipped_mails and archive_size_uncompressed vs.
	 size_uncompressed)
	don't write out "domain" to index, extract it on read from target
	skip mails w/ dates w/ year < 1970 and > 2038 (make Mktime() happy)
 added: keep track of scores (SpamAssassin) and make histogram
        (still needs todo the scatter and daily_score graph, though)
	die() if an unknown option is passed/found
2003-10-24 v0.11_7 Tels (not released)
 added: first_date - exclude any mail with a date earlier than this (as bogus)
	support for the following date formats:
        # Sun, 19 Jul 03 23:49:16 +0200
        # 18 Oct 2003 23:45:29 -0000
2003-11-02 v0.12 Tels 110 tests
 fixed: uses much less memory when reading in a mail-archive (not index)
	(mail was hold in memory twice, while creating a big structure
	 containing the mail headers and id. Now it is processed line by line
	 and the stats are calculated directly)
	calculate size of mails correctly (forgot to take body into account)
	don't write 'toplevel' to index, we can reconstruct it from 'target'
	target address extraction works now
2003-12-21 v0.13a Tels 110 tests (not released)
  * samples/convert: Had a bug of "Return-path" vs. "Return-Path:"
  * when extracting target, don't look into From:
  * limit SA score to 200, not 100000
2004-01-04 v0.13 Tels 112 tests
  * create the output dir if it does not exist (Thanx Paul Wolters!)
  * added BUGS section to doc
  * converted makegraph.t to Test::More and added some tests
  * output dir no longer gets a trailing slash (good for OS/2?) and we use
    File::Spec to construct output file names
  * better reasons for skipping mails (string vs. some number)