@@ -2,6 +2,10 @@
 This lists any changes between the last version and the current, since the full
 change log got quite big:
 
+v0.14:
+  * forgot to remove DEBUG output
+
+v0.13:
 Fixed:
   * samples/convert: Had a bug of "Return-path" vs. "Return-Path:"
   * when extracting target, don't look into From:
