@@ -14,16 +14,16 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 3fde6bf8ec485487d8ba7d02ed2cecb549bfb969 BUGS
-SHA1 03efb3753650fcad6d0a2dbaa36801d11883ea29 CHANGES
+SHA1 96ffc7dd0b2688c85a6b96e79bc5e5d04a76bb5e CHANGES
 SHA1 9562bac6f49b6c4366dc946c1567e07e63b68f94 CREDITS
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 c19282d80fdda45077ce4a8539b3078ef534ec9e MANIFEST
-SHA1 e8ac20b7c292748ca08b4a128889b649757f53b5 META.yml
+SHA1 dbc40e80659a635cabc7edf7286ca3b594d84952 META.yml
 SHA1 3a0725c7f91b4ac17ef79391d0e4460dcae4e616 Makefile.PL
-SHA1 409e57501c213a908fa6e8aea71a9ec5052abc1b NEW
+SHA1 17c3f78e6428ec62b4c1fb7d4c0e998f2abc08b3 NEW
 SHA1 f9c04a00e086e6039d484a8a048522a9a7db57de README
 SHA1 0421d037bd415034320314cb4535d78b3841631e TODO
-SHA1 bf62b17888cc0578337ba2320c512504d29becd1 lib/Mail/Graph.pm
+SHA1 4698981c9193da74779050439684ff9a674d6cbb lib/Mail/Graph.pm
 SHA1 552a0de189eb787984dec5426ebda13d04558704 samples/archive/sample.txt.gz
 SHA1 84dbf70f4dab31029599c962fb6e809530d0a011 samples/archive/sample2.txt.gz
 SHA1 41f928aa44f806c2b250ec9ef95558967649fd4c samples/convert.pl
@@ -42,11 +42,11 @@ SHA1 5fa65493848528d899a71079fd4e0595b5c95c32 t/testmail.4
 Version: GnuPG v1.2.2-rc1-SuSE (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBP/gTF3cLPEOTuEwVAQFhNgf+IxPWsH8vN3Gm1lcbmi1Kaxs8xMLULRUs
-scgRjVBl6DIJ6k7tRz1SCZgskgShaqO6IGph9CmYVTCLFwSf7vxhwRHpXzE7xs58
-hrMRgumI9aQJo9FGWFx9nSEmXF7hiif9XcwCFUqGJKhNsAiEGSC6CqTxrhf3v4Qx
-Q2I95q+Ik9YT2cddklzmrll2c3ElWDLGtK0m6DzH2NLFGAmoMtxoUN3i+ERA61vW
-b46LKx1R/mMoh2T3k8MvG467mn2zOl8/L8NDc5YzLpylMKYWaFH+kmY1CrldlNSg
-jDUQmMymXtrzdSkATUiuRF8Q2qhuWtiAG9WoGVKz26MHH5Puw7w96w==
-=50zw
+iQEVAwUBP/gUv3cLPEOTuEwVAQF4gQf/SD5chQTpupWyxE/MlKmGxPYezPyr3+TG
+a4NcivdxzS5Afyyg9/rNSFL9qIkOAfo7NXR9ocllHjFb8rNXj1mdezZV+6E3D9Z6
+kuudw6B7sgbV78Fy/tSj1izcbpZa17RPlhJ6d/e+EGh2gZHWqrcxa6MLF99BJ3u2
+bq++TEz08mnIDlJoUMXeGJmtUqGd2DCC9/QLovJ9ry+XGw8Nd6OkOS3JXkCa6Qkt
+RSYCPPUYwXhSlXU4xVTN51PGigOytoEt7kgJIsN6Bvd/1bJu0EJzRylrGrJUJBa5
+9eRiFTuPrxa/zCi7JcQPE4KkPZdMOzLYHUzZdjyT/yDDtfA4NLvfRA==
+=C8jS
 -----END PGP SIGNATURE-----
